--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       {
         "src": "/.*",
-        "dest": "/src/App.jsx"
+        "dest": "/src/main.jsx"
       }
     ]
   }
