--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "src/app.jsx",
-        "use": "@vercel/static-build"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/.*",
-        "dest": "/src/main.jsx"
-      }
-    ]
-  }
+    "rewrites": [{"source": "/(.*)", "destination": "/"}]
+}
